--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
 boto3==1.26.133
-botocore==1.29.133
-grpcio==1.54.0
-grpcio-tools==1.54.0
-jmespath==1.0.1
-pip==23.1.2
-protobuf==4.23.0
-python-dateutil==2.8.2
-s3transfer==0.6.1
-setuptools==65.5.0
-six==1.16.0
-urllib3==1.26.15
+grpcio==1.54.2
+grpcio-tools==1.54.2
+pymongo==4.3.3
