Fix db connection

--- a/Docker/Auto Scalling Group/Dockerfile-asg
+++ b/Docker/Auto Scalling Group/Dockerfile-asg
@@ -1,7 +1,7 @@
 FROM python:3.11.2
 
-COPY credentials ~/.aws/
-COPY config ~/.aws/
+COPY credentials ~/.aws/credentials
+COPY config ~/.aws/config
 
 COPY . /app
 
